Implementacion de Menu e imagen

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,75 @@
-.titulo{
-    text-align: center;
-    font-size: 40px;
-    font-family: 'Times New Roman', Times, serif;
-    color: rgb(50, 0, 0);
-    background-color: rgb(200, 255, 255);
-    margin: 0;
+/* Establece el fondo transparente para el menú */
+nav {
+    background-color: rgba(255, 255, 255, 0);
+    padding: 20px;
+    position: fixed;
+    top: 0;
+    width: 95%;
+    transition: background-color 0.3s; /* Transición suave para el cambio de color de fondo */
+
+}
+
+/* Estiliza los elementos de la lista y los enlaces */
+ul {
+    list-style-type: none;
     padding: 0;
-    margin-top: 0;
-    margin-bottom: 0;
+    text-align: right;
+}
+
+li {
+    display: inline;
+    margin-right: 20px; /* Espacio entre elementos del menú */
+}
+
+a {
+    text-decoration: none;
+    color: #fffdfd; /* Color del texto del menú */
+    font-weight: bold;
+}
+
+/* Cambia el color del enlace cuando se pasa el mouse por encima */
+a:hover {
+    color: #ff9900; /* Cambia el color al pasar el mouse por encima */
+}
 
 
+/* Establece una imagen de fondo para el encabezado */
+#mi-encabezado {
+    background-image: url('img/Cuidad.jpg'); /* Reemplaza 'ruta-de-tu-imagen.jpg' con la ubicación de tu imagen */
+    background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
+    background-position: center; /* Centra la imagen en el encabezado */
+    height: 33rem; /* Altura del encabezado (ajusta según tus necesidades) */
+    color: #ffffff; /* Color del texto en el encabezado para asegurar la legibilidad */
+    text-align: center; /* Alinea el contenido al centro del encabezado */
+    padding: 40px; /* Espacio de relleno interno para el contenido */
+}
+
+/* Estilos adicionales para el texto en el encabezado */
+#mi-encabezado h1 {
+    font-size: 45px; /* Tamaño de fuente del título */
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#mi-encabezado p {
+    font-size: 18px; /* Tamaño de fuente del texto del encabezado */
+}
+
+.menu-azul {
+    background-color: rgba(255, 255, 255, 0); /* Cambia el color de fondo a azul */
+    transition: background-color 0.3s; /* Agrega una transición suave */
+}
+
+body {
+    margin-top: 0px; /* Ajusta según la altura del menú */
+    margin-left: 0px;
+    margin-right: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.texto {
+    color: #000000;
+    font-size: 20px;
+
+    text-align:justify;
+    font-family: Arial, Helvetica, sans-serif;
 }
