--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,11 @@
 nav {
     background-color: rgba(255, 255, 255, 0);
     padding: 20px;
-    position: fixed;
+    position: fixed; /* Posiciona el menú en la parte superior de la página */
     top: 0;
-    width: 95%;
+    left: 0;
+    width: 100%;
+    
     transition: background-color 0.3s; /* Transición suave para el cambio de color de fondo */
 
 }
@@ -12,13 +14,12 @@ nav {
 /* Estiliza los elementos de la lista y los enlaces */
 ul {
     list-style-type: none;
-    padding: 0;
     text-align: right;
 }
 
 li {
     display: inline;
-    margin-right: 20px; /* Espacio entre elementos del menú */
+    margin-right: 30px; /* Espacio entre elementos del menú */
 }
 
 a {
@@ -38,10 +39,12 @@ a:hover {
     background-image: url('img/Cuidad.jpg'); /* Reemplaza 'ruta-de-tu-imagen.jpg' con la ubicación de tu imagen */
     background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
     background-position: center; /* Centra la imagen en el encabezado */
-    height: 33rem; /* Altura del encabezado (ajusta según tus necesidades) */
+    height: 35rem; /* Altura del encabezado (ajusta según tus necesidades) */
+    
     color: #ffffff; /* Color del texto en el encabezado para asegurar la legibilidad */
     text-align: center; /* Alinea el contenido al centro del encabezado */
-    padding: 40px; /* Espacio de relleno interno para el contenido */
+    padding: 20px; /* Espacio de relleno interno para el contenido */
+    
 }
 
 /* Estilos adicionales para el texto en el encabezado */
@@ -57,6 +60,7 @@ a:hover {
 .menu-azul {
     background-color: rgba(255, 255, 255, 0); /* Cambia el color de fondo a azul */
     transition: background-color 0.3s; /* Agrega una transición suave */
+    
 }
 
 body {
